--- a/redditclone/app/views/posts/new.html.erb
+++ b/redditclone/app/views/posts/new.html.erb
@@ -17,7 +17,7 @@
 
   <label>Sub
     <% @subs.each do |sub|%>
-      <input type="checkbox" name="post[sub_id][]" value="<%=sub.id%>"><%=sub.title%>
+      <input type="checkbox" name="post[sub_ids][]" value="<%=sub.id%>"><%=sub.title%>
     <% end%>
 
   </label>
